@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1786] fixed not remembered group when use paging in export screen (Vedmak)
  - [ZBX-1801] fixed action disable link (Vedmak)
  - [ZBX-1763] added last week to SLA weekly graph (Aly)
  - [ZBX-1716] fixed server behaviour (not dying silently) when mysql database user, password or privileges change (Dmitry)
